Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-10104

Agent fails to detect memory size on FreeBSD

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.9.0
    • None
    • agent
    • None
    • OS: FreeBSD 12.1 amd64

      Mesos: 1.9.0 (pkg install apache-mesos)

       

    Description

       

      Agent has 8GB total memory, only 1GB detected (as a fallback), logs show following message;

      containerizer.cpp:147] Failed to auto-detect the size of main memory: 'No such file or directory' ; defaulting to DEFAULT_MEM

       

       

      % mesos-agent --work_dir=/tmp/mesos --master=localhost:5050

      I0314 19:54:58.447687 123047936 main.cpp:350] Build: 2020-03-14 14:24:45 by root
      I0314 19:54:58.447954 123047936 main.cpp:351] Version: 1.9.0
      I0314 19:54:58.447962 123047936 main.cpp:354] Git tag: 1.9.0-rc3
      I0314 19:54:58.447966 123047936 main.cpp:358] Git SHA: 5e79a584e6ec3e9e2f96e8bf418411df9dafac2e
      I0314 19:54:58.450829 123047936 resolver.cpp:69] Creating default secret resolver
      I0314 19:54:58.451334 123047936 containerizer.cpp:318] Using isolation { environment_secret, filesystem/posix, posix/mem, posix/cpu }
      I0314 19:54:58.453112 123047936 provisioner.cpp:300] Using default backend 'copy'
      I0314 19:54:58.456461 130289664 slave.cpp:267] Mesos agent started on (1)@127.0.0.1:5051
      I0314 19:54:58.456518 130289664 slave.cpp:268] Flags at startup: --appc_simple_discovery_uri_prefix="http://" --appc_store_dir="/tmp/mesos/store/appc" --authenticate_http_readonly="false" --authenticate_http_readwrite="false" --authenticatee="crammd5" --authentication_backoff_factor="1secs" --authentication_timeout_max="1mins" --authentication_timeout_min="5secs" --authorizer="local" --container_disk_watch_interval="15secs" --containerizers="mesos" --default_role="*" --disk_watch_interval="1mins" --docker="docker" --docker_ignore_runtime="false" --docker_kill_orphans="true" --docker_registry="https://registry-1.docker.io" --docker_remove_delay="6hrs" --docker_socket="/var/run/docker.sock" --docker_stop_timeout="0ns" --docker_store_dir="/tmp/mesos/store/docker" --docker_volume_checkpoint_dir="/var/run/mesos/isolators/docker/volume" --docker_volume_chown="false" --enforce_container_disk_quota="false" --executor_registration_timeout="1mins" --executor_reregistration_timeout="2secs" --executor_shutdown_grace_period="5secs" --fetcher_cache_dir="/tmp/mesos/fetch" --fetcher_cache_size="2GB" --fetcher_stall_timeout="1mins" --frameworks_home="" --gc_delay="1weeks" --gc_disk_headroom="0.1" --gc_non_executor_container_sandboxes="false" --help="false" --hostname_lookup="true" --http_command_executor="false" --http_heartbeat_interval="30secs" --initialize_driver_logging="true" --isolation="posix/cpu,posix/mem" --launcher="posix" --launcher_dir="/usr/local/libexec/mesos" --logbufsecs="0" --logging_level="INFO" --master="localhost:5050" --max_completed_executors_per_framework="150" --memory_profiling="false" --network_cni_metrics="true" --network_cni_root_dir_persist="false" --oversubscribed_resources_interval="15secs" --port="5051" --qos_correction_interval_min="0ns" --quiet="false" --reconfiguration_policy="equal" --recover="reconnect" --recovery_timeout="15mins" --registration_backoff_factor="1secs" --runtime_dir="/tmp/mesos/runtime" --sandbox_directory="/mnt/mesos/sandbox" --strict="true" --switch_user="true" --version="false" --work_dir="/tmp/mesos" --zk_session_timeout="10secs"
      W0314 19:54:58.456838 130289664 slave.cpp:271]
      **************************************************
      Agent bound to loopback interface! Cannot communicate with remote master(s). You might want to set '--ip' flag to a routable IP address.
      **************************************************
      I0314 19:54:58.457120 130289664 disk_profile_adaptor.cpp:78] Creating default disk profile adaptor module
      W0314 19:54:58.458086 130289664 containerizer.cpp:147] Failed to auto-detect the size of main memory: 'No such file or directory' ; defaulting to DEFAULT_MEM
      I0314 19:54:58.458818 130289664 slave.cpp:615] Agent resources: [{"name":"cpus","scalar":

      {"value":4.0}

      ,"type":"SCALAR"},{"name":"mem","scalar":

      {"value":1024.0}

      ,"type":"SCALAR"},{"name":"disk","scalar":

      {"value":74224.0}

      ,"type":"SCALAR"},{"name":"ports","ranges":{"range":[

      {"begin":31000,"end":32000}

      ]},"type":"RANGES"}]

       

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              JamesWright James Wright
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: