Fixed FreeBSD memory detection.

See MESOS-10104.

This closes #365